--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,51 +5,51 @@
   },
   "extends": [
     "eslint:recommended",
-		"plugin:import/recommended",
-		"plugin:jsx-a11y/recommended",
+    "plugin:import/recommended",
+    "plugin:jsx-a11y/recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
-		"plugin:react-hooks/recommended"
+    "plugin:react-hooks/recommended"
   ],
   "overrides": [
     {
       "env": {
         "node": true
       },
-      "files": [
-        ".eslintrc.{js,cjs}"
-      ],
+      "files": [".eslintrc.{js,cjs}"],
       "parserOptions": {
         "sourceType": "script"
       }
     }
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-		"ecmaFeatures": { "jsx": true },
+    "ecmaFeatures": { "jsx": true },
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": [
-		"import",
-		"jsx-a11y",
-		"react",
-		"react-hooks"
+    "import",
+    "jsx-a11y",
+    "react",
+    "react-hooks",
+    "@typescript-eslint"
   ],
-	"settings": {
-		"react": {
-			"version": "detect"
-		},
-		"import/resolver": {
-			"alias": {
-				"map": [
-					["@components", "./vite/src/assets/components"],
-					["@utils", "./vite/src/assets/utils"],
-					["@img", "./vite/src/assets/img"],
-					["@css", "./vite/src/assets/css"]
-				],
-				"extensions": [".js", ".jsx"]
-			}
-		}
-	},
-  "rules": {
-  }
+  "settings": {
+    "react": {
+      "version": "detect"
+    },
+    "import/resolver": {
+      "alias": {
+        "map": [
+          ["@components", "./vite/src/assets/components"],
+          ["@utils", "./vite/src/assets/utils"],
+          ["@img", "./vite/src/assets/img"],
+          ["@css", "./vite/src/assets/css"]
+        ],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  },
+  "rules": {}
 }
