--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   },
   "devDependencies": {
     "@svgr/cli": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "sass": "^1.64.1",
-    "vite": "^4.4.4"
+    "vite": "^4.4.4",
+    "wrangler": "^3.59.0"
   }
 }
