--- a/clfdogs-worker/wrangler.toml
+++ b/clfdogs-worker/wrangler.toml
@@ -1,7 +1,7 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "clfdogs-worker"
+name = "clf-dogs"
 main = "src/index.ts"
-compatibility_date = "2024-06-03"
+compatibility_date = "2024-06-05"
 compatibility_flags = ["nodejs_compat"]
 
 # Automatically place your workloads in an optimal location to minimize latency.
