--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,9 @@
         ],
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
     }
   },
   "rules": {}
