--- a/clfdogs-worker/package.json
+++ b/clfdogs-worker/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev",
+    "deploystag": "wrangler -e staging    deploy",
+    "deployprod": "wrangler -e production deploy",
+    "devstag": "wrangler -e staging    dev",
+    "devprod": "wrangler -e production dev",
     "test": "vitest",
     "cf-typegen": "wrangler types"
   },
