--- a/api/wrangler.toml
+++ b/api/wrangler.toml
@@ -1,7 +1,7 @@
 #:schema node_modules/wrangler/config-schema.json
 
 
-name = "clf-dogs"
+name = "api"
 main = "src/index.ts"
 compatibility_date = "2024-06-05"
 compatibility_flags = ["nodejs_compat"]
