--- a/cherrylanefarmdoodles/package.json
+++ b/cherrylanefarmdoodles/package.json
@@ -10,7 +10,7 @@
     "pages:build": "npx @cloudflare/next-on-pages",
     "preview": "npm run pages:build && wrangler pages dev",
     "deploy": "npm run pages:build && wrangler pages deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
+    "cf-typegen": "wrangler -e preview types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
     "next": "14.1.0",
