--- a/cherrylanefarmdoodles/wrangler.toml
+++ b/cherrylanefarmdoodles/wrangler.toml
@@ -2,7 +2,6 @@
 
 
 name = "cherylanefarmdoodles"
-main = "src/index.ts"
 compatibility_date = "2024-06-05"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output/static"
@@ -14,7 +13,7 @@ pages_build_output_dir = ".vercel/output/static"
 ################################################################################
 [env.production]
   d1_databases = [
-    { binding = "dogsDB_prod", database_name = "dogs_prod", database_id = "4492423c-a6d9-4590-8a0b-4743b9e6c951" }
+    { binding = "dogsDB", database_id = "4492423c-a6d9-4590-8a0b-4743b9e6c951" }
   ]
 
 ################################################################################
@@ -26,9 +25,9 @@ pages_build_output_dir = ".vercel/output/static"
 ################################################################################
 ################################### Staging ####################################
 ################################################################################
-[env.staging]
+[env.preview]
   d1_databases = [
-    { binding = "dogsDB", database_name = "dogs_staging", database_id = "0543200f-b691-4f63-b7ce-d576d5c0b1dd" }
+    { binding = "dogsDB", database_id = "0543200f-b691-4f63-b7ce-d576d5c0b1dd" }
   ]
 
 ################################################################################
