Fix: configure tests for Next.js with pages.

--- a/cherrylanefarmdoodles/wrangler.toml
+++ b/cherrylanefarmdoodles/wrangler.toml
@@ -1,37 +1,11 @@
 name = "cherrylanefarmdoodles"
 compatibility_date = "2024-06-05"
 compatibility_flags = ["nodejs_compat"]
-pages_build_output_dir = ".vercel/output/static"
 
-
-
-################################################################################
-################################## Production ##################################
-################################################################################
-[env.production]
-  d1_databases = [
-    { binding = "dogsDB", database_id = "4492423c-a6d9-4590-8a0b-4743b9e6c951" }
-  ]
-
-################################################################################
-################################################################################
-################################################################################
-
-
-
-################################################################################
-################################### Staging ####################################
-################################################################################
-[env.preview]
-  d1_databases = [
-    { binding = "dogsDB", database_id = "f72630ac-2ffe-41bb-a429-ccd67b55aa8f" }
-  ]
-
-################################################################################
-################################################################################
-################################################################################
-
-
+[[d1_databases]]
+binding = "dogsDB"
+database_name = "dogs_prev"
+database_id = "f72630ac-2ffe-41bb-a429-ccd67b55aa8f"
 
 # In-file Documentation{{{
 # Automatically place your workloads in an optimal location to minimize latency.{{{
