Build: Changed the build command.
Test: Added a test command.

--- a/cherrylanefarmdoodles/package.json
+++ b/cherrylanefarmdoodles/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pages:build": "npx @cloudflare/next-on-pages",
+    "test": "vitest",
+    "pages:build": "npx @cloudflare/next-on-pages --outdir .vercel/output/static",
     "preview": "npm run pages:build && wrangler pages dev",
     "deploy": "npm run pages:build && wrangler pages deploy",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
