--- a/cherrylanefarmdoodles/tsconfig.json
+++ b/cherrylanefarmdoodles/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -10,7 +11,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "incremental": true,
     "plugins": [
       {
@@ -22,8 +23,10 @@
     },
     "types": [
         "@cloudflare/workers-types/2023-07-01"
-    ]
+    ],
+		"checkJs": false /* Enable error reporting in type-checked JavaScript files. */,
+		"forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules", "test"]
 }
