--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,11 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "plugin:eslint-plugin-next-on-pages/recommended"
+    "plugin:eslint-plugin-next-on-pages/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "plugins": [
     "eslint-plugin-next-on-pages"
-  ]
+  ],
+  "parser": "@typescript-eslint/parser"
 }
