--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,33 @@
 reference/
 .viminfo
 
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# wrangler files
+.wrangler
+.dev.vars
+
 # NODE IGNORES
 # Logs
 logs
