--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-next-on-pages": "^1.11.3",
+    "gsap": "^3.12.5",
     "sass": "^1.77.6",
     "typescript": "^5",
     "vercel": "^34.2.7",
