--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "rm -dr .next/ && next dev",
+    "dev": "rm -fdr .next/ && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --no-cache ",
