Feat: Adds svg images and other static files for menu.
Fix: Modifies .eslintrc.json to allow using <img> tags with next.
(temporary)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,10 @@
   "plugins": [
     "eslint-plugin-next-on-pages"
   ],
-  "parser": "@typescript-eslint/parser"
+  "parser": "@typescript-eslint/parser",
+  "ignorePatterns": ["src/!**/*"],
+  "rules": {
+    // Disable this rule after integrating with Cloudflare R2.
+    "@next/next/no-img-element": "off"
+  }
 }
