--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,6 +7,11 @@ binding = "dogsDB"
 database_name = "dogs_prev"
 database_id = "f72630ac-2ffe-41bb-a429-ccd67b55aa8f"
 
+[[r2_buckets]]
+binding = "dogImages"
+bucket_name = "cherrylanefarmpics"
+preview_bucket_name = "cherrylanefarmpics-preview"
+
 # In-file Documentation{{{
 # Automatically place your workloads in an optimal location to minimize latency.{{{
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
