--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vite-node": "^2.0.3"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.11.3",
@@ -24,7 +26,7 @@
     "@cloudflare/workers-types": "^4.20240614.0",
     "@gsap/react": "^2.1.1",
     "@svgr/cli": "^8.1.0",
-    "@types/node": "^20",
+    "@types/node": "^20.14.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
