--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "gsap": "^3.12.5",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "vite-node": "^2.0.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.11.3",
