--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "cherrylanefarms-utils": "^1.0.7",
     "gsap": "^3.12.5",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "thetyster-utils": "^1.1.2"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.11.3",
