Chore: Update ignores.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Temporarily Hidden Until needed.
-src/components/utils.ts
+R2-Uploads/encrypted_outputs
+R2-Uploads/uploads
 
 reference/
 .viminfo
