--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
-    "cherrylanefarms-utils": "^1.0.7",
+    "cherrylanefarms-utils": "^1.0.10",
+    "criptoe": "^1.1.3-1",
     "gsap": "^3.12.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "thetyster-utils": "^1.4.4"
+    "thetyster-utils": "^2.0.3"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.11.3",
