--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "dependencies": {
     "criptoe": "^1.1.4-0",
     "gsap": "^3.12.5",
-    "next": "14.1.0",
+    "next": "^14.2.11",
     "react": "^18",
     "react-dom": "^18",
     "thetyster-utils": "^2.1.1"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.11.3",
+    "@cloudflare/next-on-pages": "^1.13.2",
     "@cloudflare/vitest-pool-workers": "^0.4.5",
     "@cloudflare/workers-types": "^4.20240614.0",
     "@gsap/react": "^2.1.1",
