--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.5",
     "thetyster-utils": "^2.1.1"
   },
   "devDependencies": {
