Feat: Adds script for clearing the local miniflare KV cache.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint --no-cache ",
     "test": "vitest",
-    "kv-clean": "./scripts/kv-clean",
+    "kv-clear": "./scripts/kv-clear",
+    "kv-clear-local": "rm -fdr .wrangler/state/v3/kv",
     "pages:build": "npx @cloudflare/next-on-pages --outdir .vercel/output/static",
     "preview": "npm run pages:build && npx wrangler pages dev .vercel/output/static",
     "deploy": "npm run pages:build && npx wrangler pages deploy .vercel/output/static",
