Chore!: Update NPM packages.
Fix: Build failures from new types for dynamic route parameters.

BREAKING CHANGE: New Next version and new type checks.

--- a/package.json
+++ b/package.json
@@ -18,31 +18,32 @@
   "dependencies": {
     "criptoe": "^1.1.4-0",
     "gsap": "^3.12.5",
-    "next": "^14.2.11",
+    "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.5",
     "thetyster-utils": "^2.1.1"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.2",
-    "@cloudflare/vitest-pool-workers": "^0.4.5",
-    "@cloudflare/workers-types": "^4.20240614.0",
+    "@cloudflare/next-on-pages": "^1.13.5",
+    "@cloudflare/vitest-pool-workers": "^0.5.27",
+    "@cloudflare/workers-types": "^4.20241112.0",
     "@gsap/react": "^2.1.1",
     "@svgr/cli": "^8.1.0",
-    "@types/node": "^20.14.10",
+    "@types/node": "^22.9.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "eslint-plugin-next-on-pages": "^1.11.3",
+    "eslint-config-next": "^15.0.3",
+    "eslint-plugin-next-on-pages": "^1.13.5",
     "gsap": "^3.12.5",
-    "sass": "^1.77.6",
-    "typescript": "^5",
-    "vercel": "^34.2.7",
-    "vitest": "1.5.0",
-    "wrangler": "^3.61.0"
+    "npm-check-updates": "^17.1.11",
+    "sass": "^1.80.7",
+    "typescript": "^5.6.3",
+    "vercel": "^39.0.0",
+    "vitest": "^2.0.5",
+    "wrangler": "^3.86.1"
   }
 }
