--- a/package.json
+++ b/package.json
@@ -18,32 +18,31 @@
   "dependencies": {
     "criptoe": "^1.1.4-0",
     "gsap": "^3.12.5",
-    "next": "^15.0.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.0.4",
+    "react": "^19",
+    "react-dom": "^19",
     "sharp": "^0.33.5",
     "thetyster-utils": "^2.1.1"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.5",
-    "@cloudflare/vitest-pool-workers": "^0.5.27",
-    "@cloudflare/workers-types": "^4.20241112.0",
+    "@cloudflare/next-on-pages": "^1.13.6",
+    "@cloudflare/vitest-pool-workers": "^0.5.34",
+    "@cloudflare/workers-types": "^4.20241205.0",
     "@gsap/react": "^2.1.1",
     "@svgr/cli": "^8.1.0",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
-    "eslint": "^8",
-    "eslint-config-next": "^15.0.3",
-    "eslint-plugin-next-on-pages": "^1.13.5",
+    "@types/node": "^22.10.1",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "eslint": ">=8 <9",
+    "eslint-config-next": "^15.0.4",
+    "eslint-plugin-next-on-pages": "^1.13.6",
     "gsap": "^3.12.5",
-    "npm-check-updates": "^17.1.11",
-    "sass": "^1.80.7",
-    "typescript": "^5.6.3",
-    "vercel": "^39.0.0",
-    "vitest": "^2.0.5",
-    "wrangler": "^3.86.1"
+    "sass": "^1.82.0",
+    "typescript": "^5",
+    "vercel": "^32.3.0",
+    "vitest": "2.0.5",
+    "wrangler": "^3.93.0"
   }
 }
