--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,7 @@
 name = "cherrylanefarmdoodles"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
-account_id = "11384f4c64593ba3cde6e064d5183db5"
+pages_build_output_dir = '.vercel/output/static'
 
 [[kv_namespaces]]
 binding = "__NEXT_ON_PAGES__KV_SUSPENSE_CACHE"
