--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "preview": "npm run pages:build && npx wrangler pages dev .vercel/output/static",
     "preview-remote": "npm run pages:build && npx wrangler --log-level='debug' pages dev .vercel/output/static",
     "deploy": "npm run pages:build && npx wrangler pages deploy .vercel/output/static",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
+    "wdio": "wdio run ./wdio.conf.ts"
   },
   "dependencies": {
     "criptoe": "^1.1.4-0",
@@ -31,11 +32,20 @@
     "@cloudflare/workers-types": "^4.20250129.0",
     "@gsap/react": "^2.1.2",
     "@svgr/cli": "^8.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/webdriverio": "^3.2.1",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.12.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@wdio/browser-runner": "^9.8.0",
+    "@wdio/cli": "^9.8.0",
+    "@wdio/mocha-framework": "^9.7.3",
+    "@wdio/spec-reporter": "^9.8.0",
     "eslint": ">=8 <9",
     "eslint-config-next": "^15.1.6",
     "eslint-plugin-next-on-pages": "^1.13.7",
@@ -44,6 +54,7 @@
     "typescript": "^5",
     "vercel": "^32.3.0",
     "vitest": "2.0.5",
+    "wdio-wait-for": "^3.1.0",
     "wrangler": "^3.106.0"
   }
 }
