--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -24,17 +20,11 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@pub/*": [
-        "public/*"
-      ],
-      "@styles/*": ["src/styles/*"],
+      "@/*": ["src/*"],
+      "@pub/*": ["public/*"],
+      "@styles/*": ["src/styles/*"]
     },
-    "types": [
-      "@cloudflare/workers-types/2023-07-01"
-    ],
+    "types": ["@cloudflare/workers-types/2023-07-01", "mocha"],
     "checkJs": false /* Enable error reporting in type-checked JavaScript files. */,
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */
   },
@@ -45,9 +35,5 @@
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules",
-    "test",
-    "reference"
-  ]
+  "exclude": ["node_modules", "test", "reference"]
 }
