--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,119 +3,57 @@ compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = '.vercel/output/static'
 
-[[kv_namespaces]]
-binding = "__NEXT_ON_PAGES__KV_SUSPENSE_CACHE"
-id = "32b954be1e5845b5b8b11186ae8f35fd"
-
+# In order to switch between two different D1 Databases based on environment,
+# their must be two databases. Each database must have it's own unique name and
+# binding. 
+# The databases must both be defined globally and then again in each
+# environment since environments don't inherit from the global level. The
+# global binding is used by wrangler. The environment bindings are used by the
+# code.
+#
+# Since we have two databases, both must have their own binding and namespace.
+# Additionally both namespaces and bindings must be included in each
+# environment.  The workaround to ensure that one environment does not leave
+# it's database isolate is to switch the database_id's for both of these
+# bindings.
 [[d1_databases]]
 binding = "dogsDB"
 database_name = "dogs"
 database_id = "d2d75c27-4175-4ac1-81e4-c6412970e2fb"
 migrations_dir = "test/test_integration/migrations"
+migrations_table = 'd1_migrations'
 
-[[r2_buckets]]
-binding = "dogImages"
-bucket_name = "cherrylanefarmpics"
+# The dogs-test binding is not used anywhere in the code and is only included
+# here to ensure that the databases can be switched based on the environment.
+[[d1_databases]]
+binding = "dogsDB_testing"
+database_name = "dogs-test"
+database_id = "7f0def0b-60b1-46c8-978c-f1756fbc17a2"
+migrations_dir = "test/test_integration/migrations"
+migrations_table = 'd1_migrations'
 
-# In-file Documentation{{{
-# Automatically place your workloads in an optimal location to minimize latency.{{{
-# If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
-# rather than the end user may result in better performance.
-# Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
-# [placement]
-# mode = "smart"
-# }}}
-# Variable bindings. These are arbitrary, plaintext strings (similar to environment variables){{{
-# Docs:
-# - https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
-# Note: Use secrets to store sensitive data.
-# - https://developers.cloudflare.com/workers/configuration/secrets/
-# [vars]
-# MY_VARIABLE = "production_value"
-# }}}
-# Bind the Workers AI model catalog. Run machine learning models, powered by serverless GPUs, on Cloudflare’s global network{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#workers-ai
-# [ai]
-# binding = "AI"
-# }}}
-# Bind an Analytics Engine dataset. Use Analytics Engine to write analytics within your Pages Function.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#analytics-engine-datasets
-# [[analytics_engine_datasets]]
-# binding = "MY_DATASET"
-# }}}
-# Bind a headless browser instance running on Cloudflare's global network.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#browser-rendering
-# [browser]
-# binding = "MY_BROWSER"
-# }}}
-# Bind a D1 database. D1 is Cloudflare’s native serverless SQL database.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#d1-databases
-# }}}
-# Bind a dispatch namespace. Use Workers for Platforms to deploy serverless functions programmatically on behalf of your customers.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#dispatch-namespace-bindings-workers-for-platforms
-# [[dispatch_namespaces]]
-# binding = "MY_DISPATCHER"
-# namespace = "my-namespace"
-# }}}
-# Bind a Durable Object. Durable objects are a scale-to-zero compute primitive based on the actor model.{{{
-# Durable Objects can live for as long as needed. Use these when you need a long-running "server", such as in realtime apps.
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#durable-objects
-# [[durable_objects.bindings]]
-# name = "MY_DURABLE_OBJECT"
-# class_name = "MyDurableObject"
-# }}}
-# Durable Object migrations.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#migrations
-# [[migrations]]
-# tag = "v1"
-# new_classes = ["MyDurableObject"]
-# }}}
-# Bind a Hyperdrive configuration. Use to accelerate access to your existing databases from Cloudflare Workers.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#hyperdrive
-# [[hyperdrive]]
-# binding = "MY_HYPERDRIVE"
-# id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-# }}}
-# Bind a KV Namespace. Use KV as persistent storage for small key-value pairs.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#kv-namespaces
-# [[kv_namespaces]]
-# binding = "MY_KV_NAMESPACE"
-# id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-# }}}
-# Bind an mTLS certificate. Use to present a client certificate when communicating with another service.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#mtls-certificates
-# [[mtls_certificates]]
-# binding = "MY_CERTIFICATE"
-# certificate_id = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
-# }}}
-# Bind a Queue producer. Use this binding to schedule an arbitrary task that may be processed later by a Queue consumer.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#queues
-# [[queues.producers]]
-# binding = "MY_QUEUE"
-# queue = "my-queue"
-# }}}
-# Bind a Queue consumer. Queue Consumers can retrieve tasks scheduled by Producers to act on them.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#queues
-# [[queues.consumers]]
-# queue = "my-queue"
-# }}}
-# Bind an R2 Bucket. Use R2 to store arbitrarily large blobs of data, such as files.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#r2-buckets
-# [[r2_buckets]]
-# binding = "MY_BUCKET"
-# bucket_name = "my-bucket"
-# }}}
-# Bind another Worker service. Use this binding to call another Worker without network overhead.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
-# [[services]]
-# binding = "MY_SERVICE"
-# service = "my-service"
-# }}}
-# Bind a Vectorize index. Use to store and query vector embeddings for semantic search, classification and other vector search use-cases.{{{
-# Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#vectorize-indexes
-# [[vectorize]]
-# binding = "MY_INDEX"
-# index_name = "my-index"
-# }}}
-# }}}
-# vim: foldmethod=marker
+[env.production]
+kv_namespaces = [
+  { binding = "__NEXT_ON_PAGES__KV_SUSPENSE_CACHE", id = "32b954be1e5845b5b8b11186ae8f35fd" }
+]
+d1_databases = [
+  { binding = "dogsDB_testing", database_name = "dogs-test", database_id = "d2d75c27-4175-4ac1-81e4-c6412970e2fb", migrations_dir = "test/test_integration/migrations", migrations_table = 'd1_migrations' },
+  { binding = "dogsDB", database_name = "dogs", database_id = "d2d75c27-4175-4ac1-81e4-c6412970e2fb", migrations_dir = "test/test_integration/migrations", migrations_table = 'd1_migrations' }
+]
+r2_buckets = [
+  { binding = "dogImages", bucket_name = "cherrylanefarmpics" }
+]
+
+# Entirely isolated preview environment for testing
+[env.preview]
+name = "cherrylanetesting"
+kv_namespaces= [
+  { binding = "__NEXT_ON_PAGES__KV_SUSPENSE_CACHE", id = "eb878d0ff59d4de5b61c349ab605febc" }
+]
+d1_databases = [
+  { binding = "dogsDB_testing", database_name = "dogs-test", database_id = "7f0def0b-60b1-46c8-978c-f1756fbc17a2", migrations_dir = "test/test_integration/migrations", migrations_table = 'd1_migrations' },
+  { binding = "dogsDB", database_name = "dogs", database_id = "7f0def0b-60b1-46c8-978c-f1756fbc17a2", migrations_dir = "test/test_integration/migrations", migrations_table = 'd1_migrations' }
+]
+r2_buckets = [
+  { binding = "dogImages", bucket_name = "cherrylanetesting" }
+]
