--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,8 +27,10 @@ jobs:
         run: |
           RELEASE=$( lsb_release -rs | cut -d '.' -f1 )
           sudo apt-get update
+          # Disable man-db updates which take forever and are unnecessary.
           if [ "$RELEASE" -gt 23 ];
             then
+            sudo rm /var/lib/man-db/auto-update
             sudo apt-get install -y libgtk2.0-0t64 libgtk-3-0t64 libgbm-dev libnotify-dev libnss3 libxss1 libasound2t64 libxtst6 xauth xvfb
             else
             sudo apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libnss3 libxss1 libasound2 libxtst6 xauth xvfb
@@ -42,17 +44,18 @@ jobs:
 
       - name: Run Cypress tests on preview URL
         run: |
-          npx cypress run --config baseUrl=https://preview-test.${{ secrets.CLOUDFLARE_PAGES_PROJECT }}.pages.dev -p 443
+          npx cypress run \
+          --config \
+          baseUrl="https://preview-test.${{ secrets.CLOUDFLARE_PAGES_PROJECT }}.pages.dev"
 
       - name: Get Deployment ID
-        id: get-deployment
         run: |
           printf "#################################### CURLING ####################################\n"
           RESPONSE=$(curl "https://api.cloudflare.com/client/v4/accounts/${{ secrets.CLOUDFLARE_ACCOUNT_ID }}/pages/projects/${{ secrets.CLOUDFLARE_PAGES_PROJECT }}/deployments?env=preview" \
             -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_API_TOKEN }}")
           printf "#################################################################################\n\n"
           printf "############### RESPONSE ###############\n"
-          echo "$RESPONSE" | jq
+          echo "$RESPONSE" | jq -r ".result[0]"
           printf "########################################\n\n"
           DEPLOYMENT_ID=$(echo "$RESPONSE" | jq -r '.result[0].id')
           PREVIEW_URL=$(echo "$RESPONSE" | jq -r '.result[0].url')
