--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,9 +11,6 @@ jobs:
       CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
       CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
       CLOUDFLARE_PAGES_PROJECT: ${{ secrets.CLOUDFLARE_PAGES_PROJECT }}
-    outputs:
-      preview_url: ${{ steps.get-deployment.outputs.preview_url }}
-      deployment_id: ${{ steps.get-deployment.outputs.deployment_id }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -70,21 +67,9 @@ jobs:
           echo "Deployment ID: $DEPLOYMENT_ID"
           echo "Trigger Branch: $TRIGGER_BRANCH"
 
-          # Case-insensitive branch check
-          TRIGGER_BRANCH_LOWER=$(echo "$TRIGGER_BRANCH" | tr '[:upper:]' '[:lower:]')
-          if [ "$TRIGGER_BRANCH_LOWER" = "preview/test" ]; then
-            exit 0
-          else
-            echo "::error::Cannot run tests on branch '$TRIGGER_BRANCH'"
-            printf "\e[91mFAILED\e[0m: Cannot run accurate tests on $TRIGGER_BRANCH.\n\n"
-            exit 1
-          fi
-
-      - name: Delete Testing Deployment
-        run: |
           # Delete the specified Deployment With ID $DEPLOYMENT_ID
-          DELRESPONSE=$(curl "https://api.cloudflare.com/client/v4/accounts/${{ secrets.CLOUDFLARE_ACCOUNT_ID }}/pages/projects/${{ secrets.CLOUDFLARE_PAGES_PROJECT }}/deployments/${{ steps.get-deployment.outputs.deployment_id }}?force=true"  \
+          DELRESPONSE=$(curl "https://api.cloudflare.com/client/v4/accounts/${{ secrets.CLOUDFLARE_ACCOUNT_ID }}/pages/projects/${{ secrets.CLOUDFLARE_PAGES_PROJECT }}/deployments/$DEPLOYMENT_ID?force=true"  \
             -X DELETE \
-            -H "X-Auth-Email: ${{ secrets.CLOUDFLARE_EMAIL }}" \
-            -H "X-Auth-Key: ${{ secrets.CLOUDFLARE_API_TOKEN }}")
+            -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_API_TOKEN }}")
+
           echo "$DELRESPONSE" | jq
