--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Test Cherry Lane Farms
+name: Cherry Lane End-to-End Tests
 
 on:
   push:
@@ -39,13 +39,18 @@ jobs:
       - name: Deploy project
         run: npm run deploy
 
+      - name: Wait for the deployment to populate to the edge
+        run: |
+          sleep 90
+          echo "Deployment should have reached the edge now."
+
       - name: Run Cypress tests on preview URL
         run: |
           npx cypress run \
           --config \
           baseUrl="https://preview-test.${{ secrets.CLOUDFLARE_PAGES_PROJECT }}.pages.dev"
 
-      - name: Get Deployment ID
+      - name: Delete Testing Deployment
         run: |
           printf "#################################### CURLING ####################################\n"
           RESPONSE=$(curl "https://api.cloudflare.com/client/v4/accounts/${{ secrets.CLOUDFLARE_ACCOUNT_ID }}/pages/projects/${{ secrets.CLOUDFLARE_PAGES_PROJECT }}/deployments?env=preview" \
