--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ci:setup": "./scripts/ci-setup",
     "ci:test": "./env/bin/act --secret-file ./env/actions.secrets",
-    "e2e:local": "npx cypress open --config baseUrl='http://localhost:3000'",
+    "e2e:local": "yes | ./scripts/migrate-test-d1 && npx cypress open --config baseUrl='http://localhost:3000'",
     "dev": "rm -fdr .next/ && next dev",
     "build": "next build",
     "start": "next start",
