--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "browserstack-cypress-cli": "^1.32.6",
     "cypress": "^14.1.0",
     "eslint": ">=8 <9",
     "eslint-config-next": "^15.1.6",
